Start having the ability to export a flattened xml with expanded config references.

--- a/core/rsrc/i18n/viewer.properties
+++ b/core/rsrc/i18n/viewer.properties
@@ -7,6 +7,7 @@ m.title = Three Rings Model Viewer
 
 m.file = File
 m.quit = Quit
+m.export_flat = Export Flat XML
 
 m.edit = Edit
 m.configs = Configs...
@@ -49,3 +50,4 @@ m.remove_track = Remove Track
 
 m.global_speed = Global Speed:
 
+m.xml_files = XML Files (*.xml)
